--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,9 @@ vignettes/*.pdf
 .Renviron
 
 # pkgdown site
-docs/
+#docs/
+encrypt.R
+.staticrypt.json
 
 # translation temp files
 po/*~
@@ -49,3 +51,5 @@ po/*~
 rsconnect/
 
 /.quarto/
+
+*.GPX
